--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,17 +50,25 @@ h1, h2{
 #menu a:hover { 
     border-bottom:1px solid #3a3a3a;
 }
+
 .active{
     border-bottom:1px solid #3a3a3a;
 }
-/* hero image */
+
+/* hero image and cover text */
 
 #hero-outer{
     height: 600px;
     width: 100%;
     overflow: hidden;
 
+  
 }
+
+#cover-text, #cover-text h2{
+    color:#fff;
+}
+
 
 #hero-image{
     height: 600px;
@@ -74,6 +82,7 @@ h1, h2{
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
+
 /* crates the level of zoom for hero imate */
 @keyframes hero-zoom {
     from{
@@ -84,4 +93,25 @@ h1, h2{
         transform: scale(1.1);
 
     }
+}
+
+#cover-text{
+    font-size: 130%;
+    font-family: Oswald:sans-serif;
+    text-transform: uppercase;
+    letter-spacing:4px;
+    
+    width:300px;
+    height:200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom:30px;
+    right:150px; 
+
+    position: absolute;
+
 }
