--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,6 @@ h1, h2{
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: silver;
 } 
 #center-about{
     width:33%;
@@ -148,5 +147,21 @@ hr{
     float: right;
     line-height: 20px;
     clear:both;
-    margin-bottom:50px 0;
+    margin-bottom:50px;
+}
+
+.right-about-heading{
+    width:60%; 
+    float: left;
+    line-height: 20px;
+    clear:both;
+    margin-bottom:50px;
+}
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
 }
