--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
-*{
+* {
     margin: 0;
-    padding:0;
+    padding: 0;
     border: none;
 }
 
-body{
-    font-family:Lato, sans-serif;
+body {
+    font-family: Lato, sans-serif;
     font-weight: 300;
     color: #3a3a3a;
 }
 
 /* heddings and logo */
 
-h1, h2{
+h1,
+h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color:#252525;
-    
-}
-#logo{
-    float:left;
-    font-size:280%;
-    margin-left:30px;
-}
-#menu{ 
-    font-size:110%;
-    letter-spacing:4px;
+    color: #252525;
+
 }
 
-#menu, #logo {
+#logo {
+    float: left;
+    font-size: 280%;
+    margin-left: 30px;
+}
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#menu,
+#logo {
     line-height: 75px;
 }
 
-#menu li{
-    float:right;
+#menu li {
+    float: right;
     list-style-type: none;
     margin-right: 30px;
 
 }
 
-#menu a{
+#menu a {
     text-decoration: none;
     color: inherit;
-    
+
 }
 
-#menu a:hover { 
-    border-bottom:1px solid #3a3a3a;
+#menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
 }
 
-.active{
-    border-bottom:1px solid #3a3a3a;
+.active {
+    border-bottom: 1px solid #3a3a3a;
 }
 
 /* hero image and cover text */
 
-#hero-outer{
+#hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
@@ -66,17 +70,18 @@ h1, h2{
     position: relative;
 }
 
-#cover-text, #cover-text h2{
-    color:#fff;
+#cover-text,
+#cover-text h2 {
+    color: #fff;
 }
 
 
-#hero-image{
+#hero-image {
     height: 600px;
     width: 100%;
-    background: url('../images/hero-image.webp') no-repeat center center ;
+    background: url('../images/hero-image.webp') no-repeat center center;
 
- 
+
     /* animates zoom effect on loading page */
 
     animation-name: hero-zoom;
@@ -86,76 +91,82 @@ h1, h2{
 
 /* crates the level of zoom for hero imate */
 @keyframes hero-zoom {
-    from{
+    from {
         transform: scale(1);
 
     }
-    to{
+
+    to {
         transform: scale(1.1);
 
     }
 }
 
-#cover-text{
+#cover-text {
     font-size: 130%;
     font-family: Oswald:sans-serif;
     text-transform: uppercase;
-    letter-spacing:4px;
-    
-    width:300px;
-    height:200px;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
 
     padding-top: 40px;
     padding-left: 10px;
 
     background-color: rgba(241, 109, 107, .7);
 
-    bottom:30px;
-    right:150px; 
+    bottom: 30px;
+    right: 150px;
 
     position: absolute;
 
 }
+
 /* club ethos */
-#club-ethos{
-    height:600px
+#club-ethos {
+    height: 600px
 }
-#left-about{
+
+#left-about {
     padding-top: 30px;
     width: 33%;
     float: left;
-    
-} 
-#right-about{
+
+}
+
+#right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-} 
-#center-about{
-    width:33%;
+}
+
+#center-about {
+    width: 33%;
     margin: 0 auto;
 
-} 
-hr{
+}
+
+hr {
     border-top: 1px solid #3a3a3a;
     width: 100%;
     margin: 5px 0;
 }
 
-.left-about-heading{
-    width:60%;
+.left-about-heading {
+    width: 60%;
     float: right;
     line-height: 20px;
-    clear:both;
-    margin-bottom:50px;
+    clear: both;
+    margin-bottom: 50px;
 }
 
-.right-about-heading{
-    width:60%; 
+.right-about-heading {
+    width: 60%;
     float: left;
     line-height: 20px;
-    clear:both;
-    margin-bottom:50px;
+    clear: both;
+    margin-bottom: 50px;
 }
 
 .right-about-heading h2 {
@@ -163,28 +174,39 @@ hr{
 }
 
 .right-about-heading p {
-    text-align: right ;
+    text-align: right;
 }
 
-#welcome{
+#welcome {
     text-align: center;
-    margin:20px 0;
-    font-size:280%
+    margin: 20px 0;
+    font-size: 280%
 }
 
-#circle-container{
+#circle-container {
     width: 300px;
-    height:300px;
-    padding:30px;
+    height: 300px;
+    padding: 30px;
     border-style: solid;
-    border-color:#ccc;
-    border-width:1px;
-    border-radius:50%;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
     margin: 0 auto;
 }
 
 #circle-cover-bg {
-    background:url('../images/ethos-center-image.jpg') no-repeat center center;
+    background: url('../images/ethos-center-image.jpg') no-repeat center center;
     height: 100%;
-    border-radius:50%;
+    border-radius: 50%;
+}
+
+/* event times */
+#times {
+    background-image:url(../images/dublin-city.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width:100%;
+    overflow: hidden;
+
 }
