--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,7 @@ fotter{
     }
 
     /* For larger to medium screens size from 1200px wide and down */
-    
+
 @media screen and (max-width: 1200px) {
     #club-ethos {
         width: 65%;
@@ -287,4 +287,14 @@ fotter{
     hr {
         display: none;
     }
+}
+
+/* For medium screen size from 950px wide an down */
+@media screen and (max-width: 950px) {
+#menu{
+    clear:left;
+    float: left;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    line-height:25px;
 }
