--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,7 @@ fotter{
 #photos > img{
     width:100%;
     }
+    
 
     /* For larger to medium screens size from 1200px wide and down */
 
@@ -283,6 +284,13 @@ fotter{
         float: left;
         padding: 0;
     }
+    
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
 
     hr {
         display: none;
@@ -297,4 +305,28 @@ fotter{
     margin-left: 30px;
     margin-bottom: 20px;
     line-height:25px;
+}
+#cover-text {
+    left: 0;
+}
+
+#club-ethos {
+    width: 90%;
+    height: 1200px;
+    margin: 0 auto;
+}
+
+.left-about-heading, .right-about-heading {
+    width: inherit;
+}
+
+.left-about-heading h2, .right-about-heading h2 {
+    width: 100%;
+    text-align: center;
+}
+
+.left-about-heading p, .right-about-heading p {
+    text-align: center;
+    padding: 0 20px;
+}
 }
